部屋番号発行中

--- a/coinTowerBattle/Base.lproj/Main.storyboard
+++ b/coinTowerBattle/Base.lproj/Main.storyboard
@@ -100,7 +100,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="txS-Dn-ziB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1881" y="162"/>
+            <point key="canvasLocation" x="1875" y="155"/>
+        </scene>
+        <!--Play View Controller-->
+        <scene sceneID="JDd-hS-nGm">
+            <objects>
+                <viewController storyboardIdentifier="play" id="N3b-dn-wca" customClass="playViewController" customModule="coinTowerBattle" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cxE-KL-XPe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="s5y-SL-pev"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eYV-92-hrD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2667" y="155"/>
         </scene>
     </scenes>
     <resources>
